--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>업무 일지 시스템</title>
-    <meta name="description" content="업무 일지 관리 시스템" />
+    <title>TeamJJang</title>
+    <meta name="description" content="TeamJJang - 프로젝트 및 업무 관리 시스템" />
   </head>
   <body>
     <div id="root"></div>
